[package]
name = "bb8"
version = "0.2.0"
authors = ["Kyle Huey <khuey@kylehuey.com>"]
description = "r2d2, but for async tokio based connections"
license = "MIT"
repository = "https://github.com/khuey/bb8"

[dependencies]
futures = "0.1"
tokio-executor = "0.1"
tokio-timer = "0.2"

[dev-dependencies]
tokio = "0.1"

[workspace]
members = [
    "postgres",
    "redis",
]
