[package]
name = "bb8"
version = "0.4.0-pre"
authors = ["Kyle Huey <khuey@kylehuey.com>"]
description = "r2d2, but for async tokio based connections"
license = "MIT"
repository = "https://github.com/khuey/bb8"
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3.0-alpha.19", package = "futures-preview" }
tokio-executor = "0.2.0-alpha.6"
tokio-timer = "0.3.0-alpha.6"

[dev-dependencies]
tokio = "0.2.0-alpha.6"

[workspace]
members = [
    "postgres",
    "redis",
]
