[package]
name = "bb8"
version = "0.8.0-rc.1"
description = "[FORK] Full-featured async (tokio-based) connection pool (like r2d2)"
license = "MIT"
repository = "https://github.com/gaoqiangz/bb8"
edition = "2021"
workspace = ".."
readme = "../README.md"
rust-version = "1.57"

[dependencies]
async-trait = "0.1"
futures-channel = "0.3.2"
futures-util = { version = "0.3.2", default-features = false, features = ["channel"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["rt", "time", "parking_lot"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
