[package]
name = "bb8"
version = "0.8.3"
edition = "2021"
rust-version = "1.63"
description = "Full-featured async (tokio-based) connection pool (like r2d2)"
license = "MIT"
repository = "https://github.com/djc/bb8"
workspace = ".."
readme = "../README.md"

[dependencies]
async-trait = "0.1"
futures-channel = "0.3.2"
futures-util = { version = "0.3.2", default-features = false, features = ["channel"] }
parking_lot = { version = "0.12", optional = true }
tokio = { version = "1.0", features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }

[features]
parking_lot = ["dep:parking_lot", "tokio/parking_lot"]
default = ["parking_lot"]
