[package]
name = "bb8-postgres"
version = "0.6.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Kyle Huey <khuey@kylehuey.com>"]
description = "Full-featured async (tokio-based) postgres connection pool (like r2d2)"
license = "MIT"
repository = "https://github.com/khuey/bb8"
edition = "2018"

[features]
"with-bit-vec-0_6" = ["tokio-postgres/with-bit-vec-0_6"]
"with-chrono-0_4" = ["tokio-postgres/with-chrono-0_4"]
"with-eui48-0_4" = ["tokio-postgres/with-eui48-0_4"]
"with-geo-types-0_4" = ["tokio-postgres/with-geo-types-0_4"]
"with-serde_json-1" = ["tokio-postgres/with-serde_json-1"]
"with-uuid-0_8" = ["tokio-postgres/with-uuid-0_8"]

[dependencies]
async-trait = "0.1"
bb8 = { version = "0.6.0", path = "../bb8" }
tokio = { version = "1.0.0", features = ["rt"] }
tokio-postgres = "0.6"

[dev-dependencies]
futures-util = "0.3.2"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
