[package]
name = "bb8-redis"
version = "0.15.0"
edition = "2021"
rust-version = "1.63"
description = "Full-featured async (tokio-based) redis connection pool (like r2d2)"
license = "MIT"
repository = "https://github.com/djc/bb8"

[dependencies]
async-trait = "0.1"
bb8 = { version = "0.8", path = "../bb8" }
redis = { version = "0.26", default-features = false, features = ["tokio-comp"] }

[dev-dependencies]
futures-util = "0.3.15"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
