[package]
name = "bb8-redis"
version = "0.24.0"
edition = "2024"
rust-version = "1.88.0"
description = "Full-featured async (tokio-based) redis connection pool (like r2d2)"
license = "MIT"
repository = "https://github.com/djc/bb8"

[dependencies]
bb8 = { version = "0.9", path = "../bb8" }
redis = { version = "0.32", default-features = false, features = ["tokio-comp"] }

[dev-dependencies]
futures-util = "0.3.15"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
