[package]
name = "bb8-redis"
version = "0.26.0"
edition = "2021"
rust-version = "1.75"
description = "Full-featured async (tokio-based) redis connection pool (like r2d2)"
license = "MIT"
repository = "https://github.com/djc/bb8"

[dependencies]
bb8 = { version = "0.9", path = "../bb8" }
redis = { version = "1.0.1", default-features = false, features = ["tokio-comp"] }

[dev-dependencies]
futures-util = "0.3.15"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
